--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #0f1113;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0f1113;
     --foreground: #ededed;
   }
 }
@@ -18,4 +18,52 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.AvatarRoot {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	vertical-align: middle;
+	overflow: hidden;
+	user-select: none;
+	width: 45px;
+	height: 45px;
+	border-radius: 100%;
+	background-color: var(--black-a3);
+}
+
+.AvatarImage {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: inherit;
+}
+
+.AvatarFallback {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: white;
+	color: var(--violet-11);
+	font-size: 15px;
+	line-height: 1;
+	font-weight: 500;
+}
+
+.main-section{
+  max-width: 68%;
+}
+
+.side-section{
+  max-width: 30%;
+}
+
+.tool-max-with{
+  max-width: 100%;
+ 
 }
