--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  margin: 10px;
+  margin-left: 10rem;
+  margin-right: 10rem;
 }
 
 
