--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,17 @@ body {
 
 
 
+@media only screen and (max-width: 912px) {
+	body {
+		color: var(--foreground);
+		background: var(--background);
+		font-family: Arial, Helvetica, sans-serif;
+		margin-left: 1rem;
+		margin-right: 1rem;
+	  }
+  }
+
+
 .AvatarRoot {
 	display: inline-flex;
 	align-items: center;
@@ -78,5 +89,6 @@ body {
   
   .side-section{
     max-width: 100%;
+	width: 100vw;
   }
 }
