--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,3 +92,15 @@ body {
 	width: 100vw;
   }
 }
+
+@media only screen and (max-width: 450px) {
+	.flex-wrap-mobile{
+	  flex-wrap: wrap;
+	}
+}
+
+@media only screen and (width: 1280px) {
+	.flex-wrap-md{
+	  flex-wrap: nowrap;
+	}
+}
