--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,6 +93,18 @@ body {
   }
 }
 
+@media only screen and (max-width: 500px) {
+	.centered-element {
+		position: absolute !important; /* or fixed */
+		left: 50% !important;
+		transform: translateX(-50%) !important;
+	  }
+
+	  .flex-wrap-mobile{
+		flex-direction: column !important;
+	  }
+	}
+
 
 
 .tooltip-container {
@@ -150,3 +162,4 @@ body {
 	margin: 5px 0;
 	color: #fff;
 }
+
