--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,144 +22,172 @@ body {
   margin-right: 10rem;
 }
 
-
-
 @media only screen and (max-width: 912px) {
-	body {
-		color: var(--foreground);
-		background: var(--background);
-		font-family: Arial, Helvetica, sans-serif;
-		margin-left: 1rem;
-		margin-right: 1rem;
-	  }
+  body {
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
-
+}
 
 .AvatarRoot {
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	vertical-align: middle;
-	overflow: hidden;
-	user-select: none;
-	width: 45px;
-	height: 45px;
-	border-radius: 100%;
-	background-color: var(--black-a3);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  overflow: hidden;
+  user-select: none;
+  width: 45px;
+  height: 45px;
+  border-radius: 100%;
+  background-color: var(--black-a3);
 }
 
 .AvatarImage {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: inherit;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
 }
 
 .AvatarFallback {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: white;
-	color: var(--violet-11);
-	font-size: 15px;
-	line-height: 1;
-	font-weight: 500;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: var(--violet-11);
+  font-size: 15px;
+  line-height: 1;
+  font-weight: 500;
 }
 
-.main-section{
+.main-section {
   max-width: 68%;
 }
 
-.side-section{
+.side-section {
   max-width: 30%;
 }
 
-.tool-max-with{
+.tool-max-with {
   max-width: 100%;
- 
 }
-
 
 @media only screen and (max-width: 1024px) {
-  .main-section{
+  .main-section {
     max-width: 100%;
   }
-  
-  .side-section{
+
+  .side-section {
     max-width: 100%;
-	width: 100vw;
+    width: 100vw;
   }
 }
 
-@media only screen and (max-width: 500px) {
-	.centered-element {
-		position: absolute !important; /* or fixed */
-		left: 50% !important;
-		transform: translateX(-50%) !important;
-	  }
+@media only screen and (max-width: 600px) {
+  .flex-wrap-mobile {
+    flex-direction: column !important;
+  }
 
-	  .flex-wrap-mobile{
-		flex-direction: column !important;
-	  }
-	}
+  .tooltip {
+    position: fixed !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) scale(0.8) !important;
+    color: #fff;
+    background-color: #1f2124;
+    padding: 15px !important;
+    border-radius: 10px !important;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2) !important;
+    opacity: 0 !important;
+    visibility: hidden !important;
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out !important;
+    text-align: center !important;
+    pointer-events: auto !important;
+    height: fit-content;
+    max-width: 300px !important;
+    width: 90% !important;
 
-
+    z-index: 1000 !important;
+  }
+  .tooltip-container:hover .tooltip,
+  .tooltip-container:focus-within .tooltip {
+    opacity: 1 !important;
+    visibility: visible !important;
+    transform: translate(-50%, -50%) scale(1) !important;
+  }
+  .tooltip img {
+    width: 60px !important;
+    height: 60px !important;
+    border-radius: 50% !important;
+    display: block !important;
+    margin: 0 auto 10px !important;
+  }
+  .tooltip a {
+    text-decoration: none !important;
+    color: #0077b5 !important;
+    font-weight: bold !important;
+    display: block !important;
+    margin-top: 5px !important;
+    transition: color 0.3s ease-in-out !important;
+  }
+  .tooltip a:hover {
+    color: #005582 !important;
+  }
+}
 
 .tooltip-container {
-	position: relative;
-	display: inline-block;
-	cursor: pointer;
-	font-size: 24px;
-	color: #fff;
-	
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 24px;
+  color: #fff;
 }
 .tooltip {
-	position: absolute;
-	bottom: 160%;
-	left: 50%;
-	transform: translateX(-50%) scale(0.8);
-	padding: 15px;
-	border-radius: 10px;
-	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-	white-space: nowrap;
-	opacity: 0;
-	visibility: hidden;
-	transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
-	text-align: center;
-	pointer-events: auto;
-    color: #fff;
-	background-color: #1f2124;
-	width: 22rem;
-
-	
+  position: absolute;
+  bottom: 160%;
+  left: 50%;
+  transform: translateX(-50%) scale(0.8);
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  white-space: nowrap;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+  text-align: center;
+  pointer-events: auto;
+  color: #fff;
+  background-color: #1f2124;
+  width: 22rem;
 }
 .tooltip-container:hover .tooltip,
 .tooltip-container:focus-within .tooltip {
-	opacity: 1;
-	visibility: visible;
-	transform: translateX(-50%) scale(1);
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(-50%) scale(1);
 }
 .tooltip img {
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	display: block;
-	margin: 0 auto 10px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 10px;
 }
 .tooltip a {
-	text-decoration: none;
-	color: #0077b5;
-	font-weight: bold;
-	display: block;
-	margin-top: 5px;
-	transition: color 0.3s ease-in-out;
+  text-decoration: none;
+  color: #0077b5;
+  font-weight: bold;
+  display: block;
+  margin-top: 5px;
+  transition: color 0.3s ease-in-out;
 }
-
 
 .tooltip p {
-	margin: 5px 0;
-	color: #fff;
+  margin: 5px 0;
+  color: #fff;
 }
-
